// Test of field, field names and field types.

syntax = "proto3";

package structs.testdata;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Inner {
  string inner_field = 1;
  string inner_transient = 2;
}

message Inner2 {
  string inner_field = 1;    

  Inner inside = 2;
}

enum SomeEnum {
  VALUE_0 = 0;
  VALUE_1 = 1;
  VALUE_2 = 2;
}

message StructTest {
  string id = 1;

  string transient_field = 2;
  bool another_transient_field = 3;

  Inner2 inner = 4;


  // all types
  double field_double = 100;
  float field_float = 101;
  int32 field_int32 = 102;
  int64 field_int64 = 103;
  uint32 field_uint32 = 104;
  uint64 field_uint64 = 105;
  sint32 field_sint32 = 106;
  sint64 field_sint64 = 107;
  fixed32 field_fixed32 = 108;
  fixed64 field_fixed64 = 109;
  sfixed32 field_sfixed32 = 110;
  sfixed64 field_sfixed64 = 111;
  bool field_bool = 112;		
  string field_string = 113;
  bytes field_bytes = 114;

  SomeEnum field_enum = 115;



  // special messages
  google.protobuf.Timestamp field_timestamp = 200;
  google.protobuf.DoubleValue field_double_value = 201;
  google.protobuf.FloatValue field_float_value = 202;
  google.protobuf.Int64Value field_int64_value = 203;
  google.protobuf.UInt64Value field_uint64_value = 204;
  google.protobuf.Int32Value field_int32_value = 205;
  google.protobuf.UInt32Value field_uint32_value = 206;
  google.protobuf.BoolValue field_bool_value = 207;
  google.protobuf.StringValue field_string_value = 208;
  google.protobuf.BytesValue field_bytes_value = 209;

  // message persisted as bytes.
  Inner field_inner_as_bytes = 300;

  // repeated primitives repeated
  repeated double field_double_list = 400;
  repeated float field_float_list = 401;
  repeated int32 field_int32_list = 402;
  repeated int64 field_int64_list = 403;
  repeated uint32 field_uint32_list = 404;
  repeated uint64 field_uint64_list = 405;
  repeated sint32 field_sint32_list = 406;
  repeated sint64 field_sint64_list = 407;
  repeated fixed32 field_fixed32_list = 408;
  repeated fixed64 field_fixed64_list = 409;
  repeated sfixed32 field_sfixed32_list = 410;
  repeated sfixed64 field_sfixed64_list = 411;
  repeated bool field_bool_list = 412;	
  repeated string field_string_list = 413;
  repeated bytes field_bytes_list = 414;
}

message StructTestingId {
  string field_1 = 1;
  string field_2 = 2;
  string field_3 = 3;
  string field_4 = 4;
}

message StructTestingDefaultId {
  string field_1 = 1;
  string field_2 = 2;
  string field_3 = 3;
  string field_4 = 4;
  string id = 5;
}
